# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
.github/workflows/: ci-cd.yml  ci-pipeline.yml  publish-docker-image.yml
ansible/: .env.j2  todo_inventory  todo_playbook.yml
tests/: test_app.py  test_board.py
todo_app/: app.py  item.py  mongo_db_config.py  view_model.py
todo_app/config/: flask_config.py  mongo_db_config.py
todo_app/data/: database_repository.py  item_repository.py  session_items.py  to_do_state.py  trello_items.py
todo_app/models/: item.py  view_model.py
todo_app/templates/: index.html
todo_app/utility/: logging_utility.py
